--- a/employee-service-dev.yml
+++ b/employee-service-dev.yml
@@ -14,3 +14,14 @@ spring:
       ddl-auto: update
     show-sql: true
         
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - "*"    
+        
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/         
